--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,6 +1,12 @@
 .header {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    position: sticky;
+    top: 0;
+    background-color: #fff;
+    width: 100%;
+    z-index: 100;
 
     .header__icon {
         object-fit: contain;
@@ -12,11 +18,26 @@
         display: flex;
         flex: 1;
         align-items: center;
+        max-width: fit-content;
+        padding: 20px;
+        height: 30px;
+        border: 1px solid lightgray;
+        border-radius: 999px;
+
+        input {
+            border: none;
+            width: 300px;
+            padding: 10px;
+            outline: none;
+        }
     }
 
     .header__right {
         display: flex;
         align-items: center;
+        justify-content: space-between;
+        width: 15vw;
+        margin-right: 80px;
 
     }
 }
