--- a/src/styles/_banner.scss
+++ b/src/styles/_banner.scss
@@ -1,6 +1,6 @@
 .banner {
-    background: url("https://media.cntraveler.com/photos/5db1d0dd11c1e500092e7133/master/pass/airbnb-ski-aspen-28328347.jpg") center center;
-    height: 50vh;
+    background: url("https://media.cntraveler.com/photos/5db1d0dd11c1e500092e7133/master/pass/airbnb-ski-aspen-28328347.jpg") 50%;
+    // height: 50vh;
     position: relative;
 }
 
@@ -19,11 +19,8 @@
 .banner__info {
     background-color: black;
     color: white;
-    padding-top: 25vh;
-    padding-left: 50px;
-    padding-right: 50px;
-    padding-bottom: 40px;
-    width: 300px;
+    padding: 16vh 50px 40px 50px;
+    width: 400px;
 
     button {
         background-color: #ff7779;
