--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -1,4 +1,8 @@
 .home__section {
     display: flex;
     padding: 30px;
+
+    @media screen and (max-width: $bp-medium1) {
+        flex-direction: column;
+    }
 }
