--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,5 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
 
+// Break Points
+$bp-large1 : 1200px;
+$bp-large2 : 992px;
+$bp-large3 : 960px;
+$bp-medium1 : 768px;
+$bp-small1 : 576px;
+$bp-small2 : 425px;
+
 * {
     margin: 0;
     padding: 0;
