--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -23,3 +23,5 @@ $bp-small2 : 425px;
 @import './footer';
 @import './searchpage';
 @import './searchresult';
+@import './nearby';
+@import './nearbycard';
