--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -7,9 +7,14 @@
     }
 }
 
-.home__nearby {
+.home__nearby,
+.home__anywhere {
     padding: 0 80px;
     margin-top: 60px;
+
+    @media screen and (max-width: $bp-large1) {
+        padding: 0 60px;
+    }
     
     > h1 {
         padding-bottom: 16px;
