--- a/src/styles/_liveanywhere.scss
+++ b/src/styles/_liveanywhere.scss
@@ -1,13 +1,8 @@
-.near-by {
+.live-anywhere {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: 16px;
 
     @media screen and (max-width: $bp-large2) {
-        grid-template-columns: repeat(3, 1fr);
-    }
-
-    @media screen and (max-width: $bp-medium1) {
         grid-template-columns: repeat(2, 1fr);
     }
 }
