--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,43 +1,71 @@
 .header {
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: auto 1fr auto ;
     align-items: center;
     position: sticky;
     top: 0;
     background-color: #fff;
     width: 100%;
+    box-shadow: 0px 1px 5px rgba(0, 0, 0, .4);
     z-index: 100;
+
+    @media screen and (max-width: $bp-medium1) {
+        grid-template-columns: auto auto ;
+        grid-template-rows: 70px auto;
+        padding-bottom: 20px;
+    }
 
     .header__icon {
         object-fit: contain;
-        height: 100px;
+        // height: 100px;
+        width: 130px;
         margin-left: 20px;
     }
 
     .header__center {
+        justify-self: center;
         display: flex;
         flex: 1;
         align-items: center;
-        max-width: fit-content;
-        padding: 20px;
-        height: 30px;
+        justify-content: space-between;
+        // max-width: fit-content;
+        padding: 8px;
         border: 1px solid lightgray;
         border-radius: 999px;
+        width: 300px;
+        height: 48px;
+        box-shadow: 0px 1px 2px rgba(0, 0, 0, .1), 0px 4px 12px rgba(0, 0, 0, .05);
+
+        @media screen and (max-width: $bp-medium1) {
+            grid-column: 1/3;
+            grid-row: 2/3;
+        }
 
         input {
             border: none;
-            width: 300px;
-            padding: 10px;
+            padding: 5px;
             outline: none;
+
+            &::placeholder {
+                font-weight: bold;;
+                color: #222;
+                font-size: 14px;
+            }
         }
     }
 
     .header__right {
         display: flex;
         align-items: center;
-        justify-content: space-between;
-        width: 15vw;
-        margin-right: 80px;
+        justify-content: flex-end;
+        margin-right: 50px;
 
+        @media screen and (max-width: $bp-small1) {
+            margin-right: 20px;
+        }
+
+        > p {
+            margin-right: 5px;
+        }
     }
 }
