--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -15,6 +15,14 @@
     @media screen and (max-width: $bp-large1) {
         padding: 0 60px;
     }
+
+    @media screen and (max-width: $bp-medium1) {
+        padding: 0 40px;
+    }
+
+    @media screen and (max-width: $bp-small1) {
+        padding: 0 20px;
+    }
     
     > h1 {
         padding-bottom: 16px;
