--- a/src/styles/_liveanywhere.scss
+++ b/src/styles/_liveanywhere.scss
@@ -1,8 +1,15 @@
 .live-anywhere {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
+    gap: 15px;
 
     @media screen and (max-width: $bp-large2) {
         grid-template-columns: repeat(2, 1fr);
+    }
+
+    @media screen and (max-width: $bp-small2) {
+        grid-template-columns: 1fr;
+        justify-content: center;
+        align-items: center;
     }
 }
