home page responsiveness

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -20,6 +20,11 @@
         // height: 100px;
         width: 130px;
         margin-left: 20px;
+
+        @media screen and (max-width: $bp-small2) {
+            margin-left: 10px;
+            width: 100px;
+        }
     }
 
     .header__center {
@@ -64,8 +69,16 @@
             margin-right: 20px;
         }
 
+        @media screen and (max-width: $bp-small2) {
+            margin-right: 10px;
+        }
+
         > p {
             margin-right: 5px;
+
+            @media screen and (max-width: $bp-small2) {
+                font-size: 13px;
+            }
         }
     }
 }
