--- a/src/styles/_banner.scss
+++ b/src/styles/_banner.scss
@@ -20,7 +20,11 @@
     background-color: black;
     color: white;
     padding: 16vh 50px 40px 50px;
-    width: 400px;
+    max-width: 400px;
+
+    @media screen and (max-width: $bp-small1) {
+        background-color: rgba(0,0,0,.5);
+    }
 
     button {
         background-color: #ff7779;
