--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -1,14 +1,8 @@
-.home__section {
-    display: flex;
-    padding: 30px;
 
-    @media screen and (max-width: $bp-medium1) {
-        flex-direction: column;
-    }
-}
 
 .home__nearby,
-.home__anywhere {
+.home__anywhere,
+.home__discover {
     padding: 0 80px;
     margin-top: 60px;
 
@@ -23,8 +17,16 @@
     @media screen and (max-width: $bp-small1) {
         padding: 0 20px;
     }
+
+    @media screen and (max-width: $bp-small2) {
+        margin-top: 30px;
+    }
     
     > h1 {
         padding-bottom: 16px;
+
+        @media screen and (max-width: $bp-small2) {
+            font-size: 25px;
+        }
     }
 }
