host banner and favicon

--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -2,7 +2,8 @@
 
 .home__nearby,
 .home__anywhere,
-.home__discover {
+.home__discover,
+.home__host {
     padding: 0 80px;
     margin-top: 60px;
 
