--- a/src/styles/_searchresult.scss
+++ b/src/styles/_searchresult.scss
@@ -6,6 +6,14 @@
     border-bottom: 1px solid lightgray;
     cursor: pointer;
 
+    @media screen and (max-width: $bp-small1) {
+        flex-direction: column;
+    }
+
+    @media screen and (max-width: $bp-small2) {
+        margin: 0;
+    }
+
     &:hover {
         opacity: 0.8;
     }
@@ -15,24 +23,33 @@
         width: 350px;
         border-radius: 10px;
         overflow: hidden;
+        object-fit: cover;
+
+        @media screen and (max-width: $bp-small1) {
+            width: 100%;
+            height: 100%;
+        }
     }
-  }
+}
 
 .searchResult__info {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     padding-left: 20px;
-}
 
-.searchResult__heart {
-    position: absolute;
-    top: 20px;
-    right: 40px;
+    @media screen and (max-width: $bp-small1) {
+        padding: 0;
+    }
 }
 
 .searchResult__infoTop {
     width: 40vw;
+
+    @media screen and (max-width: $bp-small1) {
+        width: 100%;
+        margin: 10px;
+    }
 
     > h3 {
         font-weight: 300;
@@ -49,26 +66,38 @@
 .searchResult__infoBottom {
     display: flex;
     justify-content: space-between;
+
+    @media screen and (max-width: $bp-small1) {
+        margin-top: 20px;
+    }
+
+    .searchResult__stars {
+        display: flex;
+        align-items: center;
+
+        .searchResult__star {
+            color: red;
+        }
+    }
+
+    .searchResults__price {
+        position: absolute;
+        bottom: 20px;
+        right: 30px;
+    
+        > p {
+            text-align: right;
+        }
+    }
 }
 
-
-.searchResult__star {
-    color: red;
-}
-
-
-.searchResult__stars {
-    display: flex;
-    align-items: center;
-}
-
-.searchResults__price > p {
-    text-align: right;
-  }
-
-.searchResults__price {
+.searchResult__heart {
     position: absolute;
-    bottom: 20px;
-    right: 30px;
-}
+    top: 20px;
+    right: 40px;
 
+    @media screen and (max-width: $bp-small1) {
+        top: 30px;
+        right: 30px;
+    }
+}
